[package]
name = "blog_it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = {version = "4.1.4", features = ["derive"]}
regex = "1.7.1"
reqwest = {version = "0.11.14", features = ["blocking"]}
rss = "2.0.2"
